Otra vez el cambio para resetear

--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <p>Es un nuevo cambio</p>
+    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Eius, 
+        pariatur, ut ipsam aut non laudantium deserunt iusto a recusandae animi, 
+        nam odit? Aliquid repellendus est non animi molestias laboriosam odio?</p>
 </body>
 </html>
